# narwhal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bug.md  clippy.toml  deny.toml  flake.nix  progress.md  review.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.review/: g1-foundation.md  g2-drivers.md  g3-app-tui.md  g4-sql-stack.md  (+2 more)
crates/narwhal-audit/: Cargo.toml
crates/narwhal-audit/src/: config.rs  event.rs  lib.rs  redactor.rs  service.rs
crates/narwhal-audit/src/sinks/: file.rs  mod.rs  stdout.rs  syslog.rs
crates/narwhal-commands/: Cargo.toml
crates/narwhal-commands/src/: action.rs  cell_edit.rs  commands.rs  ddl.rs  explain.rs  keymap.rs  lib.rs  meta.rs  pending.rs  pre_connect.rs  schema_diff.rs  session.rs  snippets.rs  statements.rs  template.rs
crates/narwhal-commands/src/completion/: context.rs  gather.rs  items.rs  keywords.rs  mod.rs  tokenizer.rs
crates/narwhal-commands/src/export/: csv.rs  error.rs  format.rs  insert.rs  json.rs  markdown.rs  mod.rs  parquet.rs  quoting.rs  source.rs  table.rs  tsv.rs
crates/narwhal-commands/src/wizard/: fields.rs  logic.rs  mod.rs  path.rs  state.rs
crates/narwhal-commands/tests/: pre_connect_read_only.rs
crates/narwhal-config/: Cargo.toml
crates/narwhal-config/src/: credentials.rs  interpolate.rs  last_used.rs  lib.rs  logical_relations.rs  migrate.rs  paths.rs  pgpass.rs  settings.rs  url.rs
crates/narwhal-config/src/vault/: error.rs  hashicorp.rs  mod.rs  onepassword.rs  resolver.rs
crates/narwhal-config/tests/: migrate_v1_to_v2.rs  pgpass_env.rs  tls.rs  vault.rs
crates/narwhal-core/: Cargo.toml
crates/narwhal-core/src/: cancel.rs  capabilities.rs  connection.rs  driver.rs  error.rs  future.rs  lib.rs  query_stream.rs  schema.rs  ssh.rs  stream.rs  value.rs
crates/narwhal-diagram/: Cargo.toml  README.md
crates/narwhal-diagram/examples/: demo.rs
crates/narwhal-diagram/src/: build.rs  icons.rs  lib.rs  model.rs
crates/narwhal-diagram/src/render/: dot.rs  mermaid.rs  mod.rs
crates/narwhal-diagram/tests/: build.rs  render.rs
crates/narwhal-domain/: Cargo.toml
crates/narwhal-domain/src/: completion.rs  editor.rs  export.rs  goto.rs  history.rs  lib.rs  motion.rs  relation.rs  result.rs  status.rs
crates/narwhal-domain/src/editor/: history.rs  mod.rs  selection.rs
crates/narwhal-domain/src/result/: actions.rs  mod.rs  state.rs
crates/narwhal-driver-registry/: Cargo.toml
crates/narwhal-driver-registry/src/: lib.rs
crates/narwhal-drivers/: Cargo.toml
crates/narwhal-drivers/src/: lib.rs  registry.rs
crates/narwhal-drivers/src/clickhouse/: mod.rs  types.rs
crates/narwhal-drivers/src/duckdb/: mod.rs
crates/narwhal-drivers/src/mssql/: ddl.rs  mod.rs  types.rs
crates/narwhal-drivers/src/mysql/: mod.rs  types.rs
crates/narwhal-drivers/src/postgres/: mod.rs  tls.rs  types.rs
crates/narwhal-drivers/src/sqlite/: mod.rs
crates/narwhal-drivers/tests/: clickhouse_binding.rs  clickhouse_ddl.rs  clickhouse_escape.rs  clickhouse_integration.rs  duckdb_byte_accuracy.rs  duckdb_ddl.rs  duckdb_read_only.rs  duckdb_returning.rs  mssql_binding.rs  mssql_smoke.rs  mysql_binding.rs  mysql_byte_accuracy.rs  mysql_ddl.rs  mysql_decode.rs  mysql_integration.rs  mysql_protocol.rs  mysql_table_kind.rs  mysql_unique_constraints.rs  postgres_byte_accuracy.rs  postgres_ddl.rs  postgres_integration.rs  postgres_schema_diff_roundtrip.rs  sqlite_byte_accuracy.rs  sqlite_ddl.rs  sqlite_foreign_keys.rs  sqlite_read_only.rs
crates/narwhal-drivers/tests/fixtures/mssql/: README.md  docker-compose.yml
crates/narwhal-drivers/tests/mysql_common/: mod.rs
crates/narwhal-drivers/tests/postgres_common/: mod.rs
crates/narwhal-history/: Cargo.toml
crates/narwhal-history/benches/: append.rs
crates/narwhal-history/src/: journal.rs  lib.rs
crates/narwhal-history/tests/: redaction.rs
crates/narwhal-lsp/: Cargo.toml
crates/narwhal-lsp/src/: client.rs  lib.rs  transport.rs
crates/narwhal-lsp/tests/: integration.rs
crates/narwhal-mcp/: Cargo.toml  README.md
crates/narwhal-mcp/src/: context.rs  json_value.rs  lib.rs  protocol.rs  server.rs  workspace.rs
crates/narwhal-mcp/src/tools/: describe_schema.rs  describe_table.rs  explain_query.rs  get_diagram.rs  list_connections.rs  mod.rs  run_query.rs
crates/narwhal-mcp/tests/: describe_and_explain.rs  get_diagram.rs  handshake.rs  plugin_tools.rs  run_query.rs  workspace.rs
crates/narwhal-pivot/: Cargo.toml
crates/narwhal-pivot/src/: lib.rs
crates/narwhal-plugin-wasm/: Cargo.toml  README.md
crates/narwhal-plugin-wasm/examples/hello-world/: Cargo.toml  README.md  plugin.toml
crates/narwhal-plugin-wasm/examples/hello-world/src/: lib.rs
crates/narwhal-plugin-wasm/src/: error.rs  host.rs  instance.rs  lib.rs  manifest.rs  runtime.rs
crates/narwhal-plugin-wasm/src/capability/: mod.rs  parser.rs  scope.rs  set.rs
crates/narwhal-plugin-wasm/src/limits/: fuel.rs  kv.rs  memory.rs  mod.rs
crates/narwhal-plugin-wasm/src/sandbox/: audit.rs  cache.rs  decision.rs  enforcer.rs  mod.rs  operation.rs
crates/narwhal-plugin-wasm/tests/: capability_matrix.rs  capability_settings.rs  runtime.rs
crates/narwhal-plugin-wasm/wit/: world.wit
crates/narwhal-pool/: Cargo.toml
crates/narwhal-pool/src/: pool.rs
crates/narwhal-schema-diff/: Cargo.toml  README.md
crates/narwhal-schema-diff/src/: diff.rs  lib.rs  normalise.rs
crates/narwhal-schema-diff/src/emit/: generic.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
crates/narwhal-schema-diff/tests/: diff.rs  emit_dialects.rs  emit_generic.rs
crates/narwhal-sql/: Cargo.toml
crates/narwhal-sql/benches/: splitter.rs
crates/narwhal-sql/src/: formatter.rs  guard.rs  lib.rs  lint.rs  splitter.rs
crates/narwhal-sql/src/treesitter/: edit.rs  highlight.rs  mod.rs  parser.rs  scope.rs  tests.rs
crates/narwhal-sql/tests/: treesitter.rs
crates/narwhal-vim/: Cargo.toml
crates/narwhal-vim/src/: action.rs  key.rs  machine.rs  mode.rs
docs/: STYLE.md  (+20 more)
narwhal/: Cargo.toml
narwhal/src/: main.rs
(+270 files in other folders)
