[workspace]
resolver = "2"
members = [
    "crates/narwhal-core",
    "crates/narwhal-config",
    "crates/narwhal-sql",
    "crates/narwhal-pool",
    "crates/narwhal-history",
    # T2-T2-D: append-only JSONL audit log sink for compliance use.
    "crates/narwhal-audit",
    # T0-03: 5 driver crates + narwhal-driver-registry consolidated
    # into narwhal-drivers with one cargo feature per backend.
    "crates/narwhal-drivers",
    "crates/narwhal-domain",
    "crates/narwhal-commands",
    # T2-T2-C: schema diff + DDL emit between two connections.
    "crates/narwhal-schema-diff",
    "crates/narwhal-plugin",
    "crates/narwhal-plugin-lua",
    # T1-T5-A: WASM plugin runtime (wasmtime + component model).
    "crates/narwhal-plugin-wasm",
    "crates/narwhal-vim",
    "crates/narwhal-diagram",
    # T2-T3-C: embedded LSP client (sqls / sqlls).
    "crates/narwhal-lsp",
    # T2-T4-D: pivot table aggregation engine.
    "crates/narwhal-pivot",
    "crates/narwhal-tui",
    "crates/narwhal-app",
    "crates/narwhal-mcp",
    "narwhal",
]

[workspace.package]
version = "2.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Nonantiy <nonantiy1@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nonanti/narwhal"
homepage = "https://github.com/Nonanti/narwhal"
documentation = "https://docs.rs/narwhal"
description = "Multi-driver TUI database client with a built-in MCP server"
keywords = ["database", "tui", "sql", "client", "mcp"]
categories = ["command-line-utilities", "database"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization & config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system watching (used by the settings live-reload watcher).
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }

# CLI parsing (binary only)
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Database drivers
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "column_decltype"] }
duckdb = { version = "1.1", features = ["bundled", "chrono"] }
mysql_async = { version = "0.34", default-features = false, features = ["minimal-rust", "rustls-tls"] }
mysql_common = { version = "0.32", default-features = false, features = ["chrono", "bigdecimal"] }
# T1-T2-A: MSSQL via tiberius. `default-features = false` ile yalnız
# rustls TLS hattını çekiyoruz — workspace genelinde openssl-sys'a
# bağımlılık geri gelmesin diye native-tls/vendored-openssl kapalı.
# `chrono` özellik bayrağı `Value::Date`/`DateTime` köprüsü için.
tiberius = { version = "0.12", default-features = false, features = ["chrono", "rustls", "tds73"] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }

# Utilities
parking_lot = "0.12"
directories = "5.0"
# v1.1 #1: nucleo-matcher powers the `:goto` fuzzy navigator.
# Same algorithm Helix uses; no_std-friendly, very fast.
nucleo-matcher = "0.3"
# Platform-specific backend features are MANDATORY in keyring 3.x.
# Without them the crate silently falls back to a mock store that
# accepts set() and returns None from get(), which means narwhal
# would happily ask for a password, store it nowhere, and then fail
# the next :open with 'no password'. crypto-rust avoids the OpenSSL
# system dep on Linux.
#
# `vendored` statically links libdbus into the binary so prebuilt
# releases run on minimal containers, Alpine, and NixOS without
# `libdbus-1.so.3` being installed on the host. The trade-off is that
# a libdbus CVE requires us to cut a new release — acceptable since
# every release is a fresh build anyway.
keyring = { version = "3.0", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
    "vendored",
] }
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
unicode-segmentation = "1"
arboard = { version = "3.4", default-features = false }
base64 = "0.22"

# Secret handling
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"

# Vault HTTP client (T1-T2-B). default-features = false hattı zorunlu:
# native-tls openssl-sys çekiyor; workspace genelinde rustls hattını
# saf tutmak için narwhal-drivers'taki reqwest ile aynı feature
# setini kullanıyoruz.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "system-proxy",
    "json",
] }

# Benchmarking (dev-only). HTML reports are disabled to keep the
# default-features footprint small and avoid pulling in `plotters`.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Internal crates. Both `path` and `version` are required so
# `cargo publish` produces a manifest the registry accepts — path is
# used for local development, version for the published artefact.
# Keep these in lock-step with `workspace.package.version`.
narwhal-core = { path = "crates/narwhal-core", version = "2.1.0" }
narwhal-config = { path = "crates/narwhal-config", version = "2.1.0" }
narwhal-sql = { path = "crates/narwhal-sql", version = "2.1.0" }
narwhal-pool = { path = "crates/narwhal-pool", version = "2.1.0" }
narwhal-history = { path = "crates/narwhal-history", version = "2.1.0" }
narwhal-audit = { path = "crates/narwhal-audit", version = "2.1.0" }
narwhal-drivers = { path = "crates/narwhal-drivers", version = "2.1.0", default-features = false }
narwhal-domain = { path = "crates/narwhal-domain", version = "2.1.0" }
narwhal-commands = { path = "crates/narwhal-commands", version = "2.1.0" }
narwhal-schema-diff = { path = "crates/narwhal-schema-diff", version = "2.1.0" }
narwhal-plugin = { path = "crates/narwhal-plugin", version = "2.1.0" }
narwhal-plugin-lua = { path = "crates/narwhal-plugin-lua", version = "2.1.0" }
narwhal-plugin-wasm = { path = "crates/narwhal-plugin-wasm", version = "2.1.0" }
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send", "serialize"] }
# T1-T5-A: WASM runtime — pinned so plugin SDK and host agree on the
# component-model ABI. wasmtime 45 ships the stable component model
# wired below; `wat` is dev-only for in-tree fixture components.
wasmtime = { version = "45", default-features = false, features = ["runtime", "component-model", "cranelift", "parallel-compilation", "async"] }
wat = "1.0"
narwhal-vim = { path = "crates/narwhal-vim", version = "2.0.0" }
narwhal-diagram = { path = "crates/narwhal-diagram", version = "2.0.0" }
# T2-T3-C: embedded LSP client.
narwhal-lsp = { path = "crates/narwhal-lsp", version = "2.0.0" }
# T2-T4-D: pivot table aggregation.
narwhal-pivot = { path = "crates/narwhal-pivot", version = "2.0.0" }
narwhal-tui = { path = "crates/narwhal-tui", version = "2.0.0" }
narwhal-app = { path = "crates/narwhal-app", version = "2.0.0" }
narwhal-mcp = { path = "crates/narwhal-mcp", version = "2.0.0" }

# Tree-sitter SQL parser (T1-T3-A). Pinned to 0.26 / 0.3 — the SQL
# grammar tracks the parser ABI in lockstep, so bumping either side
# requires re-running the highlight / scope queries against the new
# node-name set. The grammar ships as a C parser; the `cc` dep is
# hauled in automatically by `tree-sitter`'s build script.
tree-sitter = "0.26"
tree-sitter-sequel = "0.3"

# Property tests for incremental-parse correctness (T1-T3-A).
proptest = "1"

[workspace.lints.rust]
# `deny` rather than `forbid` so individual *integration tests* can
# locally `#![allow(unsafe_code)]` when they must mutate the process
# environment. Rust 2024 reclassified `std::env::set_var`/`remove_var`
# as `unsafe` (race with libc `getenv`), and pgpass env-resolution
# tests have to set `PGPASSWORD`. Library code keeps a stricter
# `#![forbid(unsafe_code)]` at the lib root in every crate.
unsafe_code = "deny"
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
# Adding `#[derive(Debug)]` to every internal helper struct buys little
# in a TUI app — the few that need it derive it explicitly.
missing_debug_implementations = "allow"

# Lints scoped to *every* target (lib, bin, tests, examples).
# Lints that should fire only in production code (forbidden unwrap, panic,
# dbg, print macros, todo, unimplemented) are configured per-crate at the
# lib.rs / main.rs root so test code is not pestered.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
# Big handlers (handle_run_update, render, command dispatch) are
# intentionally long; splitting them shreds locality and reads worse.
too_many_lines = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
# Style-only lints with too many false positives across this codebase.
significant_drop_tightening = "allow"
option_if_let_else = "allow"
manual_let_else = "allow"
redundant_pub_crate = "allow"
needless_pass_by_value = "allow"
branches_sharing_code = "allow"
struct_excessive_bools = "allow"
# `non_exhaustive` enums force wildcard arms even when one variant
# already matches the wildcard's body; clippy reports them all.
match_same_arms = "allow"
# Re-export styles (`#[must_use]` builders, public underscore-prefixed
# fields used by serde) are intentional and don't warrant rewrites.
return_self_not_must_use = "allow"
pub_underscore_fields = "allow"
used_underscore_binding = "allow"
# Test helpers and dispatch tables routinely declare local items after
# statements for locality; harmless in practice.
items_after_statements = "allow"
# Async test helpers stay `async` so callers can `.await` them even
# when the body happens to have no await today.
unused_async = "allow"
unused_self = "allow"
# Targeted false positives — keep these allowed so contributors aren't
# spammed when touching unrelated code.
format_push_string = "allow"
format_collect = "allow"
assigning_clones = "allow"
needless_pass_by_ref_mut = "allow"
unnecessary_wraps = "allow"
unused_peekable = "allow"
struct_field_names = "allow"
implicit_hasher = "allow"
ignore_without_reason = "allow"
too_long_first_doc_paragraph = "allow"
empty_line_after_doc_comments = "allow"
redundant_closure_for_method_calls = "allow"
needless_raw_string_hashes = "allow"
needless_collect = "allow"
many_single_char_names = "allow"
single_char_pattern = "allow"
unnecessary_literal_bound = "allow"
redundant_clone = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
