[package]
# `narwhal` is squatted by an abandoned 2018 docker library on crates.io,
# so the binary crate ships as `narwhaldb`. The installed command name
# is still `narwhal` (see `[[bin]] name` below) so muscle memory and
# docs keep working.
name = "narwhaldb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "narwhal: TUI database client with a built-in MCP server (binary crate)"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[[bin]]
name = "narwhal"
path = "src/main.rs"

[lints]
workspace = true

# cargo-binstall metadata: lets users do `cargo binstall narwhal` to
# pull the prebuilt tarball produced by .github/workflows/release.yml
# instead of compiling from source. Matches the archive layout the
# workflow produces (binary at the archive root).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/narwhal-{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "narwhal-{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
narwhal-app.workspace = true
narwhal-commands.workspace = true
narwhal-config.workspace = true
narwhal-core.workspace = true
narwhal-history.workspace = true
narwhal-audit.workspace = true
narwhal-mcp.workspace = true
narwhal-schema-diff.workspace = true

chrono.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
secrecy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[features]
default = ["driver-postgres", "driver-sqlite"]
driver-postgres = ["narwhal-app/driver-postgres", "narwhal-mcp/driver-postgres"]
driver-sqlite = ["narwhal-app/driver-sqlite", "narwhal-mcp/driver-sqlite"]
driver-mysql = ["narwhal-app/driver-mysql", "narwhal-mcp/driver-mysql"]
driver-duckdb = ["narwhal-app/driver-duckdb", "narwhal-mcp/driver-duckdb"]
driver-clickhouse = ["narwhal-app/driver-clickhouse", "narwhal-mcp/driver-clickhouse"]
driver-mssql = ["narwhal-app/driver-mssql", "narwhal-mcp/driver-mssql"]
all-drivers = [
    "driver-postgres",
    "driver-sqlite",
    "driver-mysql",
    "driver-duckdb",
    "driver-clickhouse",
    "driver-mssql",
]
# Optional Linux syslog sink for the audit log. Off by
# default so non-Linux release tarballs don't drag the dependency in.
audit-syslog = ["narwhal-audit/syslog"]
