[package]
name = "narwhal-commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
description = "Stateless command and helper modules for narwhal: completion, export, wizard, snippets, DDL, EXPLAIN, cell edit, statement extraction."

[dependencies]
narwhal-core.workspace = true
narwhal-domain.workspace = true
narwhal-history.workspace = true
narwhal-pool.workspace = true
narwhal-sql.workspace = true
narwhal-config.workspace = true
narwhal-vim.workspace = true

crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
tokio = { workspace = true, features = ["sync", "process", "time", "macros", "rt"] }
uuid.workspace = true
thiserror.workspace = true
directories.workspace = true
tracing.workspace = true
base64.workspace = true
chrono = { workspace = true }
# T1-T4-B: Parquet (columnar) export. The `arrow` feature pulls in the
# arrow ecosystem builders + RecordBatch so we can map narwhal `Value`s
# onto Arrow arrays before encoding. snap + zstd cover the two most
# common compression codecs without dragging brotli / lz4 / gzip
# (less common on the analytics side; the parquet `flate2` feature
# only enables the dep without picking a zlib backend, which forces
# downstream consumers to wire one — easier to just leave gzip off).
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "zstd"] }
arrow-array = "58"
arrow-schema = "58"

[dev-dependencies]
tempfile = "3"
rusqlite = "0.32"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "time"] }

[lints]
workspace = true
