[package]
name = "narwhal-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Config loader & credential storage for narwhal"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
narwhal-diagram.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
directories.workspace = true
keyring.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "process", "time", "io-util"] }
secrecy = { workspace = true }
zeroize.workspace = true
reqwest = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "process", "time", "sync"] }
