[package]
name = "narwhal-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core traits and types for narwhal"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
# M2: needed for SshTunnel::spawn_async — wraps the synchronous
# `spawn` in `spawn_blocking` so the async runtime stays responsive
# during the up-to-8s readiness wait.
tokio = { workspace = true, features = ["rt"] }
# query_stream emits debug-level breadcrumbs on close-after-error so a
# cursor-leak is observable in logs without surfacing as a user-facing
# error (the engine error already won the race).
tracing.workspace = true
