[package]
name = "narwhal-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
description = "Pure domain models for narwhal: editor buffer, results, tabs, session, sidebar, snippets. No IO, no rendering."

[dependencies]
narwhal-core.workspace = true
serde.workspace = true
# Required by `result::compare_values` for the `Value::Json` branch.
# narwhal-core already pulls serde_json in transitively; we list it
# explicitly so the dependency edge survives a future refactor.
serde_json.workspace = true

[features]
default = []

[lints]
workspace = true
