[package]
name = "narwhal-driver-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Driver registry abstraction shared by narwhal-app and narwhal-mcp."

[dependencies]
narwhal-core = { workspace = true }
narwhal-driver-postgres = { workspace = true, optional = true }
narwhal-driver-sqlite = { workspace = true, optional = true }
narwhal-driver-mysql = { workspace = true, optional = true }
narwhal-driver-duckdb = { workspace = true, optional = true }
narwhal-driver-clickhouse = { workspace = true, optional = true }

[features]
default = []
driver-postgres = ["dep:narwhal-driver-postgres"]
driver-sqlite = ["dep:narwhal-driver-sqlite"]
driver-mysql = ["dep:narwhal-driver-mysql"]
driver-duckdb = ["dep:narwhal-driver-duckdb"]
driver-clickhouse = ["dep:narwhal-driver-clickhouse"]
all-drivers = [
    "driver-postgres",
    "driver-sqlite",
    "driver-mysql",
    "driver-duckdb",
    "driver-clickhouse",
]

[lints]
workspace = true
