[package]
name = "narwhal-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Embedded LSP client for narwhal (sqls / sqlls)"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
lsp-types = "0.95"
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
