[package]
name = "narwhal-pivot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pivot table aggregation engine for narwhal"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
narwhal-core.workspace = true
thiserror.workspace = true
