[package]
name = "narwhal-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQL statement splitter and lightweight tokenisation"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
memchr = "2"
serde.workspace = true
# Pretty-printer used by `:format`. Pure Rust, dialect-aware enough
# for the four engines we ship (the postgres profile also covers
# clickhouse/duckdb adequately).
sqlformat = "0.3"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "splitter"
harness = false
