[package]
name = "narwhal-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQL statement splitter and lightweight tokenisation"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
memchr = "2"
serde.workspace = true
# Pretty-printer used by `:format`. Pure Rust, dialect-aware enough
# for the four engines we ship (the postgres profile also covers
# clickhouse/duckdb adequately).
sqlformat = "0.3"
# T1-T3-A: tree-sitter SQL parser. The grammar is a C parser compiled
# by `tree-sitter-sequel`'s build script via the `cc` crate — users
# need a working C toolchain in their PATH (most do; documented in
# docs/dev/t1-t3-a-treesitter.md).
tree-sitter.workspace = true
tree-sitter-sequel.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "splitter"
harness = false
