[package]
name = "narwhal-vim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Vim-mode state machine for narwhal"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
